# llm-as-judge

./: .gitignore  .terraform.lock.hcl  README.md  main.tf  terraform.tfvars.sample  tfplan
.github/: PULL_REQUEST_TEMPLATE.md
configuration/: conf-iac.ps1  conf-image.ps1  update-tf.ps1
src/: README.md  pyproject.toml
src/app/: __init__.py  judges.py  main.py  plugins.py
src/app/plugins/: cluster.py  kaggle.py  statistics.py
src/app/schemas/: __init__.py  endpoints.py  models.py
src/tests/: test_judges.py
